2005-03-14 Ian Rutt
 * Adapted netcdf code to handle fractional year-lengths and added
  handling in GLINT for writing mass-balance information at these times

2005-03-11 Magnus Hagdorn
 * configure.in: bumped version to 0.5.0
 * moved test_config.conf to tests
 * removed data dir
 * fix doc date to release date

2005-03-11 Ian Rutt
 * Moved glint_example files to glint-example module

2005-03-11 Magnus Hagdorn
 * configure.in, version.tex.in glimmer_version.f90.in, glimmer-config.in: add micro version
 * updated NEWS

2005-03-10 Ian Rutt
 * Began preliminary work on objectifying mass-balance accumulation in GLINT
 * Now plumbed in and working. Needs more work to enable asynchronous coupling
 * Removed cabability of saving global orog input and avoiding downscaling at the moment
   as it doesn't work.

2005-03-09 Ian Rutt
 * Added glimmer_daily_pdd.f90 - fully plumbed in.
 * Updated glint to have configureable number of days in year
 * Added ncep data for 6h temperatures and adjusted glint_example.f90
 * Added flags to GLINT to avoid unnecessary downscaling and accumulation
   of variables.

2005-03-08 Magnus Hagdorn
 * removed install-sh, it is autogenerated when bootstrap is run

2005-03-07 Ian Rutt
 * Added a couple of output-to-screen subroutines to help with debugging
   netcdf output
 * Fixed (hopefully) a problem with averaging/accumulation in glint.f90
 * Fixed problem with glint_example.f90 - orography input was being read
   incorrectly.
 * Added glide_nc_fillall call from glint_initialise
 * Removed redundant mass-balance timestep value from glint_type
 * Made glint_vars.def a bit more sensible
 * Minor changes to glint_example config file

2005-03-07 Magnus Hagdorn
 * glimmer_ncio.f90: fixed bug #110

2005-03-07 Magnus Hagdorn
 * glide_thck.f90: only print warning about empty thck field when compiled with -DDEBUG
 * glide_launch.py: write extra fields to result file, date, glimmer version, glimmer FCFLAGS
 * add simple test directory