@@ -19,8 +19,6 @@ dimensions:    time, y1, x1
 units:         meter
 long_name:     snow depth
 data:          data%snowd
-load:          1
-hot:           1
 coordinates:   lon lat
 
 [siced]
@@ -28,6 +26,4 @@ dimensions:    time, y1, x1
 units:         meter
 long_name:     superimposed ice depth
 data:          data%siced
-load:          1
-hot:           1
 coordinates:   lon lat
