@@ -1,6 +1,9 @@
 2005-03-14 Ian Rutt
  * Adapted netcdf code to handle fractional year-lengths and added
   handling in GLINT for writing mass-balance information at these times
+ * Fixed snow-depth to be accumulated on land only
+ * Sorted out glint_example so the run goes all the way to the beginning
+ of the next year.
 
 2005-03-11 Magnus Hagdorn
  * configure.in: bumped version to 0.5.0
